# Weather_Parser

./: .gitignore  CMakeLists.txt  README.md  do.txt  main.cpp  main.h  res.txt
mvc/: CMakeLists.txt  observer.h
mvc/controller/: appController.h  controller.h
mvc/model/: model.h  weatherForecastModel.cpp  weatherForecastModel.h
mvc/view/: appView.cpp  appView.h  view.h
src/: cities.txt  main.css  request.json
